--- a/google-homepage/index.html
+++ b/google-homepage/index.html
@@ -6,7 +6,28 @@
     </head>
 
     <body>
-        
+        <nav>
+            <ul>
+                <li><a>About</a></li>
+                <li><a>Store</a></li>
+                <li class="move-right"><img id="user-circle" src="#"></li>
+                <li class="move-right"><img id="bell" src="#"></li>
+                <li class="move-right"><img id="apps" src="#"></li>
+                <li class="move-right"><a>Images</a></li>
+                <li class="move-right"><a>Gmail</a></li>
+            </ul>
+        </nav>
+        <main>
+            <div id="google-image">
+                <img src="#" alt="google-image">
+            </div>
+            <form action="#">
+                <input type="text" name="Search" placeholder="Search..." id="">
+                <div>
+                    <button type="submit">Google Search</button><button>I'm Feeling Lucky</button>
+                </div>
+            </form>
+        </main>
 
     </body>
 </html>
