add footer. TODO: reference img urls

--- a/google-homepage/index.html
+++ b/google-homepage/index.html
@@ -8,13 +8,13 @@
     <body>
         <nav>
             <ul>
-                <li><a>About</a></li>
-                <li><a>Store</a></li>
-                <li class="move-right"><img id="user-circle" src="#"></li>
-                <li class="move-right"><img id="bell" src="#"></li>
-                <li class="move-right"><img id="apps" src="#"></li>
-                <li class="move-right"><a>Images</a></li>
-                <li class="move-right"><a>Gmail</a></li>
+                <li class="center"><a>About</a></li>
+                <li class="center"><a>Store</a></li>
+                <li class="move-right"><img id="user" src="./user.png"></li>
+                <li class="move-right" id="bell"><img src="./bell.png"></li>
+                <li class="move-right"><img id="apps" src="./apps.png"></li>
+                <li class="move-right center"><a>Images</a></li>
+                <li class="move-right center"><a>Gmail</a></li>
             </ul>
         </nav>
         <main>
@@ -28,6 +28,14 @@
                 </div>
             </form>
         </main>
-
+        <footer>
+            <ul>
+                <li><a>Advertising</a></li>
+                <li><a>Business</a></li>
+                <li class="move-right"><a>Privacy</a></li>
+                <li class="move-right"><a>Terms</a></li>
+                <li class="move-right"><a>Settings</a></li>
+            </ul>
+        </footer>
     </body>
 </html>
