google-homepage project complete

--- a/google-homepage/index.html
+++ b/google-homepage/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link href="./style.css" type="text/css" rel="stylesheet">
-        <title>Google Homepage Copy</title>
+        <title>Google</title>
     </head>
 
     <body>
@@ -10,21 +10,21 @@
             <ul>
                 <li class="center"><a>About</a></li>
                 <li class="center"><a>Store</a></li>
-                <li class="move-right"><img id="user" src="./user.png"></li>
+                <li class="move-right" id="user"><img src="./user.png"></li>
                 <li class="move-right" id="bell"><img src="./bell.png"></li>
-                <li class="move-right"><img id="apps" src="./apps.png"></li>
+                <li class="move-right" id="apps"><img src="./apps.png"></li>
                 <li class="move-right center"><a>Images</a></li>
                 <li class="move-right center"><a>Gmail</a></li>
             </ul>
         </nav>
         <main>
             <div id="google-image">
-                <img src="#" alt="google-image">
+                <img src="./new-years-day-2019-5179180558843904.4-law.gif" alt="Happy New Year 2019">
             </div>
             <form action="#">
                 <input type="text" name="Search" placeholder="Search..." id="">
                 <div>
-                    <button type="submit">Google Search</button><button>I'm Feeling Lucky</button>
+                    <button>Google Search</button><button>I'm Feeling Lucky</button>
                 </div>
             </form>
         </main>
