--- a/rockPaperScissors/index.html
+++ b/rockPaperScissors/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <script>
+
+        let playerScore = 0;
+        let computerScore = 0;
+        let round = 1;
+
         function computerPlay() {
             options = ['rock', 'paper', 'scissors'];
             randomOption = Math.floor(Math.random() * 3);
@@ -17,20 +22,26 @@
         function gamePlay(playerSelection, computerSelection) {
             playerSelection = playerSelection.toLowerCase();
             if (playerSelection === 'rock' && computerSelection === 'scissors') {
+                playerScore++;
                 return "You Win! Rock beats scissors!";
             } else if (playerSelection === 'rock' && computerSelection === 'paper'){
+                computerScore++;
                 return "You Lose! Paper beats rock!";
             } else if (playerSelection === 'rock' && computerSelection === 'rock') {
                 return "It's a draw!";
             } else if (playerSelection === 'scissors' && computerSelection === 'scissors') {
                 return "It's a draw!";
             } else if (playerSelection === 'scissors' && computerSelection === 'paper') {
+                playerScore++;
                 return "You win! Scissors beats paper!";
             } else if (playerSelection === 'scissors' && computerSelection === 'rock') {
+                computerScore++;
                 return "You lose! rock beats scissors!";
             } else if (playerSelection === 'paper' && computerSelection === 'scissors') {
+                computerScore++;
                 return "You lose! Scissors beats paper!";    
             } else if (playerSelection === 'paper' && computerSelection === 'rock') {
+                playerScore++;
                 return "You Win! Paper beats rock!";
             } else if (playerSelection === 'paper' && computerSelection === 'paper') {
                 return "It's a draw!";
@@ -38,7 +49,26 @@
                 return "error";
             }
         }
-        console.log(gamePlay("Rock", computerPlay()));
+
+        function game() {
+            while (round <= 5) {
+                console.log(`Current score: Player ${playerScore}, Computer ${computerScore}`);
+                console.log(`Round: ${round} `);
+                round++;
+                let playerSelection = prompt("Please choose rock, paper, or scissors.");
+                return gamePlay(playerSelection, computerPlay());
+            }
+
+            if (playerScore > computerScore) {
+                return "Player Wins Match!";
+            } else if (playerScore < computerScore) {
+                return "Computer Wins Match!";
+            } else {
+                return "Match is a draw!";
+            }
+        }
+
+        console.log(game());
     
     </script>
 </body>
