created javascript-exercises directory with workflow control directories

--- a/rockPaperScissors/index.html
+++ b/rockPaperScissors/index.html
@@ -7,6 +7,8 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+
+    <h2>Please enable browser's console to see the game.</h2>
     <script>
 
         let playerScore = 0;
