--- a/domManipulationPractice/index.html
+++ b/domManipulationPractice/index.html
@@ -7,7 +7,10 @@
     <title>DOM playground</title>
 </head>
 <body>
+    <h1> DOM Playground</h1>
     
+    <div id="container"></div>
+
 
 
     <script src="ext.js"></script>
