completed Event practice exercises from DOM manipulation

--- a/domManipulationPractice/index.html
+++ b/domManipulationPractice/index.html
@@ -10,8 +10,9 @@
     <h1> DOM Playground</h1>
     
     <div id="container"></div>
-
-
+        <button onclick="alert('hello world')">Button</button>
+        <button id="btn">Me too</button>
+        <button id="btn2">Me also</button>
 
     <script src="ext.js"></script>
 </body>
