--- a/rockPaperScissorsUI/index.html
+++ b/rockPaperScissorsUI/index.html
@@ -13,12 +13,13 @@
     <main>
         <div id="container">
             <h2>The Legendary: Rock Paper Scissors!</h2>
+            <p id="round"></p>
             <button class="btn" name="rock">rock</button>
             <button class="btn" name="paper">paper</button>
             <button class="btn" name="scissors"> scissors</button>
         </div>
         <div id="results">
-            <h4 id='game-message'></h4>
+            <p id='game-message'></p>
         </div>
     </main>
     
