game works as desired, if desired add reset button after game is over

--- a/rockPaperScissorsUI/index.html
+++ b/rockPaperScissorsUI/index.html
@@ -14,12 +14,15 @@
         <div id="container">
             <h2>The Legendary: Rock Paper Scissors!</h2>
             <p id="round"></p>
-            <button class="btn" name="rock">rock</button>
-            <button class="btn" name="paper">paper</button>
-            <button class="btn" name="scissors"> scissors</button>
+            <div id="btn-wrapper">
+                <button class="btn" name="rock">rock</button>
+                <button class="btn" name="paper">paper</button>
+                <button class="btn" name="scissors"> scissors</button>
+            </div>
         </div>
         <div id="results">
             <p id='game-message'></p>
+            <p id="win-message"></p>
         </div>
     </main>
     
