--- a/etch-A-sketch/index.html
+++ b/etch-A-sketch/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    
+    <button>Reset</button>
 
     <script src="ext.js"></script>
 </body>
