javascript-exercises - completed calculator exercise

--- a/htmlSkeletonPlayground/index.html
+++ b/htmlSkeletonPlayground/index.html
@@ -8,26 +8,15 @@
 </head>
 <body>
     <script>
-        function add7(value) {
-            return value + 7;
+        function factorial(value) {
+            let product = 1;
+            while (value > 0) {
+                product *= (value);
+                value --;
+            }
+            console.log(product);
         }
-
-        const multiply = (value1, value2) => value1 * value2;
-
-        function capitalize(word) {
-            wordTemp = word.toLowerCase();
-            wordArr = wordTemp.split('');
-            wordArr[0] = wordArr[0].toUpperCase();
-            wordCapitalized = wordArr.join('');
-            return wordCapitalized;
-        }
-
-        const lastLetter = function(word) {
-            return word[word.length - 1];
-        }
-
-        
-        console.log(lastLetter("Tyler"));
+        factorial(4);
     </script>
 </body>
 </html>
