--- a/calculator/index.html
+++ b/calculator/index.html
@@ -8,10 +8,38 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div src="container">
-        
-
-
+    <div id="container">
+        <div id="frame">
+            <div id="display">
+                <p id="print">0</p>
+            </div>
+            <div id="key-pad">
+                <button id="clear-btn">Clear</button>
+                <div id="numbers">
+                    <button class="number-btn">7</button>
+                    <button class="number-btn">8</button>
+                    <button class="number-btn">9</button>
+                    <br>
+                    <button class="number-btn">4</button>
+                    <button class="number-btn">5</button>
+                    <button class="number-btn">6</button>
+                    <br>
+                    <button class="number-btn">1</button>
+                    <button class="number-btn">2</button>
+                    <button class="number-btn">3</button>
+                    <br>
+                    <button id="btn-zero" class="btn-bottom">0</button>
+                    <button class="btn-bottom">.</button>
+                </div>
+                <div id="operators">
+                    <button class="operator-btn">/</button>
+                    <button class="operator-btn">*</button>
+                    <button class="operator-btn">-</button>
+                    <button class="operator-btn">+</button>
+                    <button class="operator-btn">=</button>
+                </div>
+            </div>
+        </div>
     </div>    
 
 
