webDev101 - calculator project - buttons work, screen display works, TODO arithmatic()

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -36,7 +36,7 @@
                     <button class="operator-btn">*</button>
                     <button class="operator-btn">-</button>
                     <button class="operator-btn">+</button>
-                    <button class="operator-btn">=</button>
+                    <button id="equals" class="operator-btn">=</button>
                 </div>
             </div>
         </div>
